Update واجب المحاضرة الاولي تانيه.html

--- a/واجب المحاضرة الاولي تانيه.html
+++ b/واجب المحاضرة الاولي تانيه.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>3 ثانوي تسليم الواجب - مستر فيصل</title>
+<title> ثانوي تسليم الواجب - مستر فيصل</title>
 <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 <style>
@@ -834,7 +834,7 @@ function generateResult(isOnline){
   });
 
   // إضافة معلومات التاريخ والوقت إلى QR Code
-  studentQR = `📚 واجب المحاضرة الرابعة\n✅ الطالب: ${name}\n📱: ${mobile}\n🏷 النوع: ${studentType}\n📊 الدرجة: ${score}/${homeworkData.length}\n📅 تاريخ التسليم: ${egyptDateTime.date}\n⏰ ${egyptDateTime.time}\n🔖 كود فريد: ${Math.random().toString(36).substring(2,10)}`;
+  studentQR = `📚 واجب المحاضرة الاولي\n✅ الطالب: ${name}\n📱: ${mobile}\n🏷 النوع: ${studentType}\n📊 الدرجة: ${score}/${homeworkData.length}\n📅 تاريخ التسليم: ${egyptDateTime.date}\n⏰ ${egyptDateTime.time}\n🔖 كود فريد: ${Math.random().toString(36).substring(2,10)}`;
 
   document.getElementById('homeworkCard').style.display="none";
   document.getElementById('resultCard').style.display="block";
