--- a/hdortalta.html
+++ b/hdortalta.html
@@ -416,6 +416,22 @@
                 <span class="info-label"><i class="fas fa-calendar-week"></i> الحصة الرابعة:</span>
                 ${createAttendanceBadge(data.week4, data.week4 || 'لم تسجل')}
               </div>
+              <div class="info-row">
+                <span class="info-label"><i class="fas fa-calendar-week"></i> الحصة الاولي الشهر الثاني:</span>
+                ${createAttendanceBadge(data.week5, data.week5 || 'لم تسجل')}
+              </div>    
+              <div class="info-row">
+                <span class="info-label"><i class="fas fa-calendar-week"></i> الحصة الثانيه الشهر الثاني:</span>
+                ${createAttendanceBadge(data.week6, data.week6 || 'لم تسجل')}
+              </div>
+              <div class="info-row">
+                <span class="info-label"><i class="fas fa-calendar-week"></i> الحصة الثالثه الشهر الثاني:</span>
+                ${createAttendanceBadge(data.week7, data.week7 || 'لم تسجل')}
+              </div>
+              <div class="info-row">
+                <span class="info-label"><i class="fas fa-calendar-week"></i> الحصة الرابعة الشهر الثاني:</span>
+                ${createAttendanceBadge(data.week8, data.week8 || 'لم تسجل')}
+              </div>
             </div>
           `;
         } else {
