--- a/talb.html
+++ b/talb.html
@@ -281,6 +281,15 @@
     </table>
     <button id="thirdHomeworkBtn" class="homework-btn" onclick="goToHomework()">اعمل الواجب دلوقتي</button>
 
+          <td>الخامسة</td>
+          <td>علي الدولة والامة والدولة الوحدوية  </td>
+          <td>من صفحة 44 إلى 52</td>
+          <td>  مشاهدة فيديو الواجب +زتونه الاسبوع الخامس </td>
+        </tr>
+      </tbody>
+    </table>
+    <button id="thirdHomeworkBtn" class="homework-btn" onclick="goToHomework()">اعمل الواجب دلوقتي</button>
+
   </div>
 
   <script>
@@ -312,6 +321,8 @@
 
         document.getElementById('thirdTable4').style.display = 'table';
         document.getElementById('thirdHomeworkBtn').style.display = 'block';
+        document.getElementById('thirdTable5').style.display = 'table';
+        document.getElementById('thirdHomeworkBtn').style.display = 'block';  
       }
 
       // التمرير لأسفل لرؤية الجدول
