Update واجب المحاضرة الخامسة 3.html

--- a/واجب المحاضرة الخامسة 3.html
+++ b/واجب المحاضرة الخامسة 3.html
@@ -544,7 +544,7 @@ button:active {
   
 <div class="important-note">
   <h3><i class="fas fa-exclamation-circle"></i> تنبيه هام</h3>
-  <p>🚫 الي ترقيم السؤال مثال( 1-السؤال رقم 50 )شوف السؤال رقم( 50 )في المذكرة وابدأ حل السؤال ركز في الترقيم كويس بالتوفيق يابطل ❤️</p>
+  <p>🚫 هتلاقي ااجابة السؤال موجودة في المذكرة شوف اجابتك ايه واختارها سواء أ/ب/ج/د❤️</p>
 </div>
 
 <div class="question-counter" id="questionCounter">السؤال 1 من 10</div>
