--- a/natigttaltathanwy.html
+++ b/natigttaltathanwy.html
@@ -413,6 +413,16 @@
                 </div>
               </div>
             </div>
+              <div class="result-item">
+                <div class="result-icon">
+                  <i class="fas fa-calendar-week"></i>
+                </div>
+                <div class="result-content">
+                  <div class="result-label">امتحان الحصه الخامسة (الامتحان الشامل الاول)</div>
+                  <div class="result-value">${data.week5} <span class="week-score">درجة</span></div>
+                </div>
+              </div>
+            </div>
           `;
         } else {
           resultDiv.innerHTML = `
