--- a/ntigttanyathanwy.html
+++ b/ntigttanyathanwy.html
@@ -379,7 +379,7 @@
                 </div>
                 <div class="result-content">
                   <div class="result-label">امتحان الحصه الأولي</div>
-                  <div class="result-value">${data.week1} <span class="week-score">درجة</span></div>
+                  <div class="result-value">${data.week1} <span class="week-score">لايوجد</span></div>
                 </div>
               </div>
               
@@ -389,6 +389,16 @@
                 </div>
                 <div class="result-content">
                   <div class="result-label">امتحان الحصه التانيه</div>
+                  <div class="result-value">${data.week2} <span class="week-score">لايوجد</span></div>
+                </div>
+              </div>
+            </div>
+              <div class="result-item">
+                <div class="result-icon">
+                  <i class="fas fa-calendar-week"></i>
+                </div>
+                <div class="result-content">
+                  <div class="result-label">امتحان الحصه الثالثه</div>
                   <div class="result-value">${data.week2} <span class="week-score">درجة</span></div>
                 </div>
               </div>
