--- a/natigttaltathanwy.html
+++ b/natigttaltathanwy.html
@@ -419,7 +419,7 @@
                   <i class="fas fa-calendar-week"></i>
                 </div>
                 <div class="result-content">
-                  <div class="result-label">امتحان الحصه الخامسة (الامتحان الشامل الاول)</div>
+                  <div class="result-label">امتحان الحصه الخامسة </div>
                   <div class="result-value">${data.week5} <span class="week-score">الامتحان الشامل </span></div>
                 </div>
               </div>
