--- a/natigttaltathanwy.html
+++ b/natigttaltathanwy.html
@@ -329,7 +329,7 @@
   </div>
 
   <script>
-    const API_URL = "https://script.google.com/macros/s/AKfycbxl9o4C7AlTD7qKYtpwIUU3BAhrJI0Jnl8ieFRpEgrro3jQ03YevyGlOEz93huTmCAV/exec";
+    const API_URL = "https://script.google.com/macros/s/AKfycbxsuv6t0hhdAFqu769UAM2IbF7Cbmk3WQKBezsaQAi-w3JlaZMd9wR5MliLip0w77uM/exec";
     const form = document.getElementById("attendanceForm");
     const loadingScreen = document.getElementById("loadingScreen");
     const resultDiv = document.getElementById("result");
@@ -389,7 +389,7 @@
                 </div>
                 <div class="result-content">
                   <div class="result-label">امتحان الحصه الثانيه</div>
-                  <div class="result-value">${data.week2} <span class="week-score">لايوجد امتحان</span></div>
+                  <div class="result-value">${data.week2} <span class="week-score">لا يوجد امتحان</span></div>
                 </div>
               </div>
               
@@ -419,8 +419,8 @@
                   <i class="fas fa-calendar-week"></i>
                 </div>
                 <div class="result-content">
-                  <div class="result-label">امتحان الحصه الخامسة </div>
-                  <div class="result-value">${data.week5} <span class="week-score">الامتحان الشامل </span></div>
+                  <div class="result-label">امتحان الحصه الخامسة</div>
+                  <div class="result-value">${data.week5} <span class="week-score"> في الامتحان الشامل</span></div>
                 </div>
               </div>
             </div>
