--- a/ntigttanyathanwy.html
+++ b/ntigttanyathanwy.html
@@ -329,7 +329,7 @@
   </div>
 
   <script>
-    const API_URL = "https://script.google.com/macros/s/AKfycbxEynWjrZHap27VqmdnqKS7THXaUAV4LSXP1eNcrnSI6KbQRhGehZ7ohMHPT4zSFEWFGw/exec";
+    const API_URL = "https://script.google.com/macros/s/AKfycbwMeYaQOlaShwGqVoA8Rw282kfpt7WOSYhXsbBPNkqUdpAEGG3Ha9b9NLYRQKa2hneSCw/exec";
     const form = document.getElementById("attendanceForm");
     const loadingScreen = document.getElementById("loadingScreen");
     const resultDiv = document.getElementById("result");
@@ -392,14 +392,14 @@
                   <div class="result-value">${data.week2} <span class="week-score">لايوجد</span></div>
                 </div>
               </div>
-            </div>
+
               <div class="result-item">
                 <div class="result-icon">
                   <i class="fas fa-calendar-week"></i>
                 </div>
                 <div class="result-content">
                   <div class="result-label">امتحان الحصه الثالثه</div>
-                  <div class="result-value">${data.week2} <span class="week-score">درجة</span></div>
+                  <div class="result-value">${data.week3} <span class="week-score">في الامتحان</span></div>
                 </div>
               </div>
             </div>
