--- a/talb.html
+++ b/talb.html
@@ -281,10 +281,21 @@
     </table>
     <button id="thirdHomeworkBtn" class="homework-btn" onclick="goToHomework()">اعمل الواجب دلوقتي</button>
 
+    <table id="thirdTable5">
+      <thead>
+        <tr>
+          <th>المحاضرة</th>
+          <th>الامتحان</th>
+          <th>الواجب</th>
+          <th>المطلوب</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
           <td>الخامسة</td>
           <td>علي الدولة والامة والدولة الوحدوية  </td>
           <td>من صفحة 44 إلى 52</td>
-          <td>  مشاهدة فيديو الواجب +زتونه الاسبوع الخامس </td>
+          <td> مشاهدة فيديو الواجب +زتونه الاسبوع الخامس </td>
         </tr>
       </tbody>
     </table>
