--- a/الصفحه-الرئيسية/index.html
+++ b/الصفحه-الرئيسية/index.html
@@ -868,6 +868,95 @@
       </div>
     </div>
   </div>
+<html lang="ar" dir="rtl">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>من هو مستر فيصل</title>
+  <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Tajawal', sans-serif;
+      margin: 0;
+      padding: 0;
+      background: #f9f9f9;
+      color: #333;
+    }
+
+    .about-section {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 40px;
+      padding: 60px 10%;
+      background: #fff;
+    }
+
+    .about-section img {
+      width: 300px;
+      height: auto;
+      border-radius: 20px;
+      box-shadow: 0 10px 25px rgba(0,0,0,0.15);
+      animation: floatImage 3s ease-in-out infinite;
+    }
+
+    .about-text {
+      max-width: 600px;
+      animation: fadeIn 2s ease forwards;
+    }
+
+    .about-text h2 {
+      font-size: 32px;
+      margin-bottom: 15px;
+      color: #0d6efd;
+    }
+
+    .about-text p {
+      line-height: 1.9;
+      font-size: 18px;
+    }
+
+    @keyframes floatImage {
+      0% { transform: translateY(0); }
+      50% { transform: translateY(-12px); }
+      100% { transform: translateY(0); }
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateX(40px); }
+      to { opacity: 1; transform: translateX(0); }
+    }
+
+    @media (max-width: 768px) {
+      .about-section {
+        flex-direction: column;
+        text-align: center;
+      }
+      .about-section img {
+        width: 220px;
+      }
+    }
+  </style>
+</head>
+<body>
+
+  <!-- قسم النبذة -->
+  <section class="about-section">
+    <img src="https://adelabdulrahman026-byte.github.io/dashboard/IMG_6438.JPG" alt="مستر فيصل">
+    <div class="about-text">
+      <h2>من هو مستر فيصل؟</h2>
+      <p>
+        مستر فيصل هو <strong>مدرس أول جغرافيا في الإسكندرية والجمهورية</strong>، 
+        عُرف بشرحه المبسط الذي يقرّب المعلومة للطالب بشكل سهل وسلس.  
+        يؤمن أن التعليم رسالة قبل أن يكون مهنة، ويحرص دائمًا على متابعة طلابه خطوة بخطوة.
+      </p>
+      <p>
+        خبرة طويلة في مجال التدريس جعلت منه قدوة ومصدر ثقة لطلاب الثانوية العامة، 
+        حيث يجمع بين الأسلوب العصري في الشرح والالتزام بالقواعد الأكاديمية.  
+        هدفه الأساسي أن يكون مع طلابه "لحد باب اللجنة"، داعمًا ومساندًا لهم.
+      </p>
+    </div>
+  </section>
 
   <!-- تذييل الحقوق -->
   <footer>
