--- a/start.html
+++ b/start.html
@@ -354,7 +354,7 @@
     <!-- كارت العرض قريباً -->
     <section class="coming-soon-card" aria-label="قريباً على اليوتيوب">
       <img src="https://files.catbox.moe/vimik0.jpg" alt="صورة العرض قريباً" />
-      <a href="https://www.youtube.com/@Mr.faisal.geography" target="_blank" rel="noopener" class="coming-soon-button" aria-label="زيارة قناة مستر فيصل على اليوتيوب">يعرض قريبًا</a>
+      <a href="https://www.youtube.com/@Mr.faisal.geography" target="_blank" rel="noopener" class="coming-soon-button" aria-label="زيارة قناة مستر فيصل على اليوتيوب">يعرض الأن</a>
     </section>
 
     <!-- الفوتر -->
