--- a/hw.html
+++ b/hw.html
@@ -253,8 +253,8 @@
 
     // روابط الواجبات حسب نوع الواجب
     const links = {
-      "first": "https://www.mrfaisal.net/%D9%88%D8%A7%D8%AC%D8%A8%20%D8%A7%D9%84%D9%85%D8%AD%D8%A7%D8%B6%D8%B1%D8%A9%20%D8%A7%D9%84%D8%A7%D9%88%D9%84%D9%8A%20%D8%AA%D8%A7%D9%86%D9%8A%D9%87",
-      "second": "https://www.mrfaisal.net/%D8%A7%D8%AE%D8%AA%D8%A7%D8%B1%20%D9%88%D8%A7%D8%AC%D8%A8%D9%83.html"
+      "first": "https://www.mrfaisal.net/%D8%A7%D8%AE%D8%AA%D8%A7%D8%B1%20%D9%88%D8%A7%D8%AC%D8%A8%D9%83%20%D8%AA%D8%A7%D9%86%D9%8A%D9%87%20%D8%AB%D8%A7%D9%86%D9%88%D9%8A%20",
+      "second": "https://www.mrfaisal.net/%D8%A7%D8%AE%D8%AA%D8%A7%D8%B1%20%D9%88%D8%A7%D8%AC%D8%A8%D9%83"
     };
 
     // لما تضغط على أي زر واجب يفتح النافذة
