--- a/natigttaltathanwy.html
+++ b/natigttaltathanwy.html
@@ -419,7 +419,7 @@
                 </div>
                 <div class="result-content">
                   <div class="result-label">امتحان الحصه الاولي في الشهر الثاني</div>
-                  <div class="result-value">${data.week5} <span class="week-score"> في الامتحان الشامل</span></div>
+                  <div class="result-value">${data.week5} <span class="week-score"> في الامتحان </span></div>
                 </div>
               </div>
               
