--- a/اختار واجبك.html
+++ b/اختار واجبك.html
@@ -312,6 +312,14 @@
                     <p class="option-desc">  من 44 الي 52  </p>
                     <button class="option-btn">عرض الواجب</button>
                 </div>
+                    <div class="option-card" onclick="window.location.href='https://www.mrfaisal.net/%D9%88%D8%A7%D8%AC%D8%A8%20%D8%A7%D9%84%D9%85%D8%AD%D8%A7%D8%B6%D8%B1%D8%A9%20%D8%A7%D9%84%D8%B3%D8%A7%D8%AF%D8%B3%D8%A9%203%20'">
+                    <div class="option-icon">
+                        <i class="fas fa-chalkboard-teacher"></i>
+                    </div>
+                    <h2 class="option-title">واجب المحاضرة السادسة</h2>
+                    <p class="option-desc">  من 53 الي 62  </p>
+                    <button class="option-btn">عرض الواجب</button>
+                </div>
         </div>
         
         <div class="footer">
