Update اختار واجبك تانيه ثانوي .html

--- a/اختار واجبك تانيه ثانوي .html
+++ b/اختار واجبك تانيه ثانوي .html
@@ -287,6 +287,16 @@
                     <p class="option-desc">من صفحة 14 الي 18</p>
                     <button class="option-btn">عرض الواجب</button>
                 </div>
+
+                <div class="option-card" onclick="window.location.href='https://www.mrfaisal.net/%D9%88%D8%A7%D8%AC%D8%A8%20%D8%A7%D9%84%D9%85%D8%AD%D8%A7%D8%B6%D8%B1%D8%A9%20%D8%A7%D9%84%D8%AB%D8%A7%D9%84%D8%AB%D9%87%20%D8%AA%D8%A7%D9%86%D9%8A%D9%87%20'">
+                    <div class="option-icon">
+                        <i class="fas fa-chalkboard-teacher"></i>
+                    </div>
+                    <h2 class="option-title">واجب المحاضرة الثالثه</h2>
+                    <p class="option-desc">من صفحة 21 الي 23</p>
+                    <button class="option-btn">عرض الواجب</button>
+                </div>
+                
         </div>
         
         <div class="footer">
