--- a/ntigttanyathanwy.html
+++ b/ntigttanyathanwy.html
@@ -329,7 +329,7 @@
   </div>
 
   <script>
-    const API_URL = "https://script.google.com/macros/s/AKfycbzAzXzgOA-s3xbqjZGFwA5dFOjPALatiKGP6U2JmaChTXt_wlh9un6QMY__C0bUU7x3jQ/exec";
+    const API_URL = "https://script.google.com/macros/s/AKfycbzqS_aLdHrLhg7EBQGmc6CW-v26mrkwCTKL_4KDRmLEl_2RixG5rYCikNvD3UkJPJxUCA/exec";
     const form = document.getElementById("attendanceForm");
     const loadingScreen = document.getElementById("loadingScreen");
     const resultDiv = document.getElementById("result");
@@ -413,6 +413,17 @@
                 </div>
               </div>
             </div>
+
+              <div class="result-item">
+                <div class="result-icon">
+                  <i class="fas fa-calendar-week"></i>
+                </div>
+                <div class="result-content">
+                  <div class="result-label">امتحان الحصه الاولي الشهر الثاني</div>
+                  <div class="result-value">${data.week5} <span class="week-score">في الامتحان</span></div>
+                </div>
+              </div>
+            </div>     
           `;
         } else {
           resultDiv.innerHTML = `
