--- a/اختار واجبك تانيه ثانوي .html
+++ b/اختار واجبك تانيه ثانوي .html
@@ -296,6 +296,15 @@
                     <p class="option-desc">من صفحة 21 الي 23</p>
                     <button class="option-btn">عرض الواجب</button>
                 </div>
+
+                <div class="option-card" onclick="window.location.href='https://www.mrfaisal.net/%D9%88%D8%A7%D8%AC%D8%A8%20%D8%A7%D9%84%D9%85%D8%AD%D8%A7%D8%B6%D8%B1%D8%A9%20%D8%A7%D9%84%D8%B1%D8%A7%D8%A8%D8%B9%D9%87%202'">
+                    <div class="option-icon">
+                        <i class="fas fa-chalkboard-teacher"></i>
+                    </div>
+                    <h2 class="option-title">واجب المحاضرة الرابعة</h2>
+                    <p class="option-desc">من صفحة 30 الي 35</p>
+                    <button class="option-btn">عرض الواجب</button>
+                </div>
                 
         </div>
         
