--- a/واجب المحاضرة السابعة 3.html
+++ b/واجب المحاضرة السابعة 3.html
@@ -750,7 +750,7 @@
             <div class="input-group">
                 <i class="fas fa-phone"></i>
                 <input type="text" id="studentMobile" placeholder="رقم الموبايل (يبدأ بـ 01)" maxlength="11">
-                <div class="error-message" id="studentMobileError">رقم الموبايل يجب أن يبدأ بـ 01 ويتكون من 11 رقم</div>
+                <div class="error-message" id="studentMobileError"> برجاء كتابة الرقم بالانجليزي و رقم الموبايل يجب أن يبدأ بـ 01 ويتكون من 11 رقم</div>
             </div>
             <div class="input-group" id="centerCodeGroup" style="display:none;">
                 <i class="fas fa-key"></i>
