--- a/واجب المحاضرة الرابعه 2.html
+++ b/واجب المحاضرة الرابعه 2.html
@@ -703,7 +703,7 @@
             <div class="input-group">
                 <i class="fas fa-phone"></i>
                 <input type="text" id="retrieveMobile" placeholder="رقم الموبايل (يبدأ بـ 01)" maxlength="11">
-                <div class="error-message" id="mobileError">رقم الموبايل يجب أن يبدأ بـ 01 ويتكون من 11 رقم</div>
+                <div class="error-message" id="studentMobileError"> برجاء كتابة الرقم بالانجليزي و رقم الموبايل يجب أن يبدأ بـ 01 ويتكون من 11 رقم</div>
             </div>
             
             <div class="input-group">
