Update واجب المحاضرة الرابعه 2.html

--- a/واجب المحاضرة الرابعه 2.html
+++ b/واجب المحاضرة الرابعه 2.html
@@ -755,7 +755,7 @@
             <div class="input-group" id="centerCodeGroup" style="display:none;">
                 <i class="fas fa-key"></i>
                 <input type="text" id="centerCode" placeholder="كود السنتر (أرقام فقط)" maxlength="6">
-                <div class="error-message" id="centerCodeError">كود السنتر يجب أن يتكون من أرقام فقط</div>
+                <div class="error-message" id="centerCodeError"> اكتب الكود بالانجليزي و كود السنتر يجب أن يتكون من أرقام فقط</div>
             </div>
             <div class="privacy-container">
                 <input type="checkbox" id="privacyCheck">
