Update logo text in التفويلة.html

--- a/التفويلة.html
+++ b/التفويلة.html
@@ -159,7 +159,7 @@
 <body>
   <!-- محتوى بديل يظهر فوراً -->
   <div class="fallback-content" id="fallback">
-    <div class="logo">ورشة مستر فيصل</div>
+    <div class="logo">تفويلة مستر فيصل</div>
     <div class="subtitle">جاري تحميل المحتوى...</div>
     <div class="loader"></div>
   </div>
