--- a/start.html
+++ b/start.html
@@ -151,6 +151,7 @@
   .button-link:nth-child(7) { background: #795548; animation-delay: 1.8s; } /* بني */
   .button-link:nth-child(8) { background: #ff5722; animation-delay: 2.1s; } /* برتقالي محمر */
   .button-link:nth-child(9) { background: #800080; animation-delay: 2.1s;/* موف */
+  .button-link:nth-child(10) { background: #ff9800; animation-delay: 0.6s; } /* برتقالي */                           
 }
 
   @keyframes pulse {
@@ -340,6 +341,7 @@
       <a href="https://www.mrfaisal.net/shakwy" class="button-link">الشكاوي 📣</a>
       <a href="https://www.mrfaisal.net/exam" class="button-link">امتحاناتنا 📚</a>
       <a href="https://www.mrfaisal.net/%D8%A7%D9%84%D9%88%D8%B1%D8%B4%D8%A9" class="button-link">🛠️الورشة لطلاب الصف الثالث الثانوي 🌍</a>
+      <a href="https://www.mrfaisal.net/%D8%A7%D9%84%D8%AA%D9%81%D9%88%D9%8A%D9%84%D8%A9" class="button-link">🛠️تفويلة لطلاب الصف الثاني الثانوي ❤️</a>
     </nav>
 
     <!-- كارت اليوتيوب -->
