--- a/اختار واجبك.html
+++ b/اختار واجبك.html
@@ -705,7 +705,7 @@
                 </div>
                 <div class="stat-item">
                     <i class="fas fa-check-circle"></i>
-                    <span>أحدث محاضرة: <span id="latestLecture">المحاضرة  الحادي عشر</span></span>
+                    <span>أحدث محاضرة: <span id="latestLecture">المحاضرة  الثاني عشر</span></span>
                 </div>
             </div>
             
@@ -736,7 +736,11 @@
             { id: 8, title: "واجب المحاضرة الثامنه", desc: "من صفحة 86 إلى 71", pages: "86-71", url: "https://www.mrfaisal.net/%D9%88%D8%A7%D8%AC%D8%A8%20%D8%A7%D9%84%D9%85%D8%AD%D8%A7%D8%B6%D8%B1%D8%A9%20%D8%A7%D9%84%D8%AB%D8%A7%D9%85%D9%86%D9%87%203%20", icon: "graduation-cap" },
             { id: 9, title: "واجب المحاضرة التاسعه", desc: "من صفحة 87 إلى 98", pages: "87-98", url: "https://www.mrfaisal.net/%D9%88%D8%A7%D8%AC%D8%A8%20%D8%A7%D9%84%D9%85%D8%AD%D8%A7%D8%B6%D8%B1%D8%A9%20%D8%A7%D9%84%D8%AA%D8%A7%D8%B3%D8%B9%D9%873", icon: "graduation-cap" },
             { id: 10, title: "واجب المحاضرة العاشرة", desc: "من صفحة 99 إلى 116", pages: "116-99", url: "https://www.mrfaisal.net/%D9%88%D8%A7%D8%AC%D8%A8%20%D8%A7%D9%84%D9%85%D8%AD%D8%A7%D8%B6%D8%B1%D8%A9%20%D8%A7%D9%84%D8%B9%D8%A7%D8%B4%D8%B1%D8%A9%203", icon: "graduation-cap" },
-            { id: 11, title: "واجب المحاضرة الحادي عشر", desc: "", pages: "", url: "https://www.mrfaisal.net/%D8%A7%D9%84%D9%85%D8%AD%D8%A7%D8%B6%D8%B1%D8%A9%20%D8%A7%D9%84%D8%AD%D8%A7%D8%AF%D9%8A%20%D8%B9%D8%B4%D8%B1%203", icon: "graduation-cap" }
+            { id: 11, title: "واجب المحاضرة الحادي عشر", desc: "", pages: "", url: "https://www.mrfaisal.net/%D8%A7%D9%84%D9%85%D8%AD%D8%A7%D8%B6%D8%B1%D8%A9%20%D8%A7%D9%84%D8%AD%D8%A7%D8%AF%D9%8A%20%D8%B9%D8%B4%D8%B1%203", icon: "graduation-cap" },
+            { id: 11, title: "واجب المحاضرة الثاني عشر", desc: "", pages: "", url: "https://www.mrfaisal.net/%D8%A7%D9%84%D9%85%D8%AD%D8%A7%D8%B6%D8%B1%D8%A9%20%D8%A7%D9%84%D8%AB%D8%A7%D9%86%D9%8A%20%D8%B9%D8%B4%D8%B1%20%D8%AA%D8%A7%D9%84%D8%AA%D9%87%20", icon: "file-alt" }
+        ];
+
+        // إعدادات التصفح
         ];
 
         // إعدادات التصفح
