--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
-    <title>موقع مستر فيصل</title>
+    <title>مستر فيصل</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -16,6 +16,7 @@
 
 <div class="container">
 
+    <!-- إدارة أعمال -->
     <div class="card">
         <img src="https://adelabdulrahman026-byte.github.io/dashboard/new2.jpg" alt="إدارة أعمال">
         <div class="card-content">
@@ -24,6 +25,7 @@
         </div>
     </div>
 
+    <!-- جغرافيا -->
     <div class="card geo" onclick="goGeo()">
         <img src="https://adelabdulrahman026-byte.github.io/dashboard/new3.jpg" alt="جغرافيا">
         <div class="card-content">
