--- a/اختار واجبك.html
+++ b/اختار واجبك.html
@@ -726,7 +726,7 @@
     <script>
         // بيانات المحاضرات
         const lectures = [
-              { id: 12, title: "واجب المحاضرة الثامن عشر", desc: "", pages: "", url: "https://www.mrfaisal.net/18tree", icon: "file-alt" }
+              { id: 12, title: "واجب المحاضرة التاسع عشر", desc: "", pages: "", url: "https://www.mrfaisal.net/18tree", icon: "file-alt" }
         ];
         
 
