--- a/اختار واجبك.html
+++ b/اختار واجبك.html
@@ -726,7 +726,8 @@
     <script>
         // بيانات المحاضرات
         const lectures = [
-              { id: 12, title: "واجب المحاضرة العشرين", desc: "", pages: "", url: "https://www.mrfaisal.net/18tree", icon: "file-alt" }
+              { id: 12, title: "واجب المحاضرة العشرين", desc: "", pages: "", url: "https://www.mrfaisal.net/18tree", icon: "file-alt" },
+             { id: 13, title: "واجب المحاضرة الواحد والعشرون", desc: "", pages: "", url: "https://www.mrfaisal.net/19tree", icon: "file-alt" }
         ];
         
 
