--- a/اختار واجبك.html
+++ b/اختار واجبك.html
@@ -705,7 +705,7 @@
                 </div>
                 <div class="stat-item">
                     <i class="fas fa-check-circle"></i>
-                    <span>أحدث محاضرة: <span id="latestLecture">المحاضرة  الثالث عشر</span></span>
+                    <span>أحدث محاضرة: <span id="latestLecture">المحاضرة  الثاني عشر</span></span>
                 </div>
             </div>
             
