--- a/اختار واجبك.html
+++ b/اختار واجبك.html
@@ -727,9 +727,9 @@
         // بيانات المحاضرات
         const lectures = [
            
-             { id: 13, title: "واجب المحاضرة الواحد والعشرون", desc: "", pages: "", url: "https://www.mrfaisal.net/19tree", icon: "file-alt" }
+             { id: 13, title: "واجب المحاضرة الواحد والعشرون", desc: "", pages: "", url: "https://www.mrfaisal.net/19tree", icon: "file-alt" } ,
 
-{ id: 14, title: "واجب المحاضرة الثاني والعشرون", desc: "", pages: "", url: "https://www.mrfaisal.net/18tree", icon: "file-alt" },
+{ id: 14, title: "واجب المحاضرة الثاني والعشرون", desc: "", pages: "", url: "https://www.mrfaisal.net/18tree", icon: "file-alt" }
         ];
         
 
