--- a/18tree.html
+++ b/18tree.html
@@ -1528,7 +1528,7 @@
             });
 
             // إضافة معلومات التاريخ والوقت إلى QR Code
-            studentQR = `📚 واجب المحاضرة الثامن عشر تالته ثانوي\n✅ الطالب: ${name}\n📱: ${mobile}\n🏷 النوع: ${studentType}\n📊 الدرجة: ${score}/${homeworkData.length}\n📅 تاريخ التسليم: ${egyptDateTime.date}\n⏰ ${egyptDateTime.time}\n🔖 كود فريد: ${Math.random().toString(36).substring(2,10)}`;
+            studentQR = `📚 واجب المحاضرة الثاني عشر تالته ثانوي\n✅ الطالب: ${name}\n📱: ${mobile}\n🏷 النوع: ${studentType}\n📊 الدرجة: ${score}/${homeworkData.length}\n📅 تاريخ التسليم: ${egyptDateTime.date}\n⏰ ${egyptDateTime.time}\n🔖 كود فريد: ${Math.random().toString(36).substring(2,10)}`;
 
             document.getElementById('homeworkCard').style.display="none";
             document.getElementById('resultCard').style.display="block";
