--- a/اختار واجبك.html
+++ b/اختار واجبك.html
@@ -730,7 +730,7 @@
 
 { id: 14, title: "واجب المحاضرة الثاني والعشرون", desc: "", pages: "", url: "https://www.mrfaisal.net/18tree", icon: "file-alt" },  
   { id: 13, title: "واجب المحاضرة الثالث والعشرون", desc: "", pages: "", url: "https://www.mrfaisal.net/19tree", icon: "file-alt" }
-{ id: 14, title: "واجب المحاضرة الرابع والعشرون", desc: "", pages: "", url: "https://www.mrfaisal.net/18tree", icon: "file-alt" },  
+{ id: 15, title: "واجب المحاضرة الرابع والعشرون", desc: "", pages: "", url: "https://www.mrfaisal.net/18tree", icon: "file-alt" }
         ];
         
 
