--- a/hwedite2.html
+++ b/hwedite2.html
@@ -165,7 +165,7 @@
   </div>
   
   <!-- الإطار الرئيسي -->
-  <iframe src="https://script.google.com/macros/s/AKfycbwdC1QimDYNlx0X-b2V6wtDJke_k89XPCZ2dlVzaL8J0muKg0r-VE9OtgQ06bknb0it/exec?action=admin&password=123456" 
+  <iframe src="https://script.google.com/macros/s/AKfycbwQCBiyyj-E2v-YbYQQUXvhPR6mg2nZfUzwIPXMZPrgnfH44yNt012krOggUtkeHQCD/exec?action=admin" 
           allowfullscreen id="productsFrame">
   </iframe>
   
