--- a/hwedite2.html
+++ b/hwedite2.html
@@ -165,7 +165,7 @@
   </div>
   
   <!-- الإطار الرئيسي -->
-  <iframe src="https://script.google.com/macros/s/AKfycbwQCBiyyj-E2v-YbYQQUXvhPR6mg2nZfUzwIPXMZPrgnfH44yNt012krOggUtkeHQCD/exec?action=admin" 
+  <iframe src="https://script.google.com/macros/s/AKfycbxhoXN8GCL0IgrY0ZkKRfC53GuMCbtP3iWqALcjgTHJe8XPSBdYWX0KSa8V6rZYVjJT/exec?action=admin 
           allowfullscreen id="productsFrame">
   </iframe>
   
